--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,8 @@
 <body>
 <a-scene vr-mode-ui='enabled: false' arjs='sourceType: webcam; videoTexture: true; debugUIEnabled: false' renderer='antialias: true; alpha: true'>
     <a-camera gps-new-camera></a-camera>
-    <a-entity src="scene.gltf" position="0 -1 0" gps-new-entity-place="latitude: 31.439318; longitude: 74.369099" scale="0.5 0.5 0.5"></a-entity>
-    <a-entity material='color: red' position="0 -1 0" geometry='primitive: box' gps-new-entity-place="latitude: 31.439318; longitude: 74.369099" scale="0.5 0.5 0.5"></a-entity>
+    <a-entity gltf="./scene.gltf" position="0 -1 0" gps-new-entity-place="latitude: 31.439318; longitude: 74.369099" scale="0.05 0.05 0.05"></a-entity>
+    <!-- <a-entity material='color: red' position="0 -1 0" geometry='primitive: box' gps-new-entity-place="latitude: 31.439318; longitude: 74.369099" scale="0.5 0.5 0.5"></a-entity> -->
 </a-scene>
 </body>
 </html>
