--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,70 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>AR.js A-Frame Location-based</title>
-<script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
-<script type='text/javascript' src='https://raw.githack.com/AR-js-org/AR.js/master/three.js/build/ar-threex-location-only.js'></script>
-<script type='text/javascript' src='https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js'></script>
-</head>
-<body>
-<a-scene vr-mode-ui='enabled: false' arjs='sourceType: webcam; videoTexture: true; debugUIEnabled: false' renderer='antialias: true; alpha: true'>
-    <a-camera gps-new-camera></a-camera>
-    <a-entity gltf-model="./scene.gltf" position="0 -1 0" gps-new-entity-place="latitude: 31.439318; longitude: 74.369099" scale="0.05 0.05 0.05"></a-entity>
-    <!-- <a-entity material='color: red' position="0 -1 0" geometry='primitive: box' gps-new-entity-place="latitude: 31.439318; longitude: 74.369099" scale="0.5 0.5 0.5"></a-entity> -->
-</a-scene>
-</body>
+  <head>
+    <title>AR.js A-Frame Location-based</title>
+    <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
+    <script
+      type="text/javascript"
+      src="https://raw.githack.com/AR-js-org/AR.js/master/three.js/build/ar-threex-location-only.js"
+    ></script>
+    <script
+      type="text/javascript"
+      src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"
+    ></script>
+  </head>
+  <body>
+    <a-scene
+      vr-mode-ui="enabled: false"
+      arjs="sourceType: webcam; videoTexture: true; debugUIEnabled: false"
+      renderer="antialias: true; alpha: true"
+    >
+      <a-camera gps-new-camera></a-camera>
+      <a-entity
+        gltf-model="https://github.com/HarisHassan555/glbfiles/raw/3f218e1886ef19abfbff119b3c65240021a798e4/ecds_old_building_09.glb"
+        position="0 -1 0"
+        gps-new-entity-place="latitude: 31.439317; longitude: 74.369098"
+        scale="0.05 0.05 0.05"
+      ></a-entity>
+      <a-entity
+        gltf-model="./scene.gltf"
+        position="0 -1 0"
+        gps-new-entity-place="latitude: 31.439318; longitude: 74.369099"
+        scale="0.05 0.05 0.05"
+      ></a-entity>
+      <!-- <a-entity material='color: red' position="0 -1 0" geometry='primitive: box' gps-new-entity-place="latitude: 31.439318; longitude: 74.369099" scale="0.5 0.5 0.5"></a-entity> -->
+    </a-scene>
+    <script>
+        fetch('https://backend-two-mu-64.vercel.app/buildings')
+        .then(res=>{
+          return res.json();
+        })
+        .then(data=>{
+          console.log(data); 
+         // Ensure data is an array
+         if (Array.isArray(data)) {
+            // Create entities and append them to the scene
+            const scene = document.querySelector('a-scene');
+
+            data.forEach(element => {
+              // Extract name, latitude, longitude, and image file URL
+              const name = element.name;
+              const latitude = element.coordinates.lat; // Access latitude
+              const longitude = element.coordinates.lng; // Access longitude
+              const fileUrl = element.File; // Access file URL
+
+              // Create and append the entity
+              const entityHTML = createEntity(name, latitude, longitude, fileUrl);
+              const tempDiv = document.createElement('div');
+              tempDiv.innerHTML = entityHTML;
+              scene.appendChild(tempDiv.firstChild);
+            });
+          } else {
+            console.error('Expected an array but got:', data);
+          }
+        })
+        .catch(error => {
+          console.error('Error fetching data:', error);
+        });
+    </script>
+  </body>
 </html>
