--- a/public/index.html
+++ b/public/index.html
@@ -21,16 +21,16 @@
       <a-camera gps-new-camera></a-camera>
       <a-entity
         gltf-model="https://github.com/HarisHassan555/glbfiles/raw/3f218e1886ef19abfbff119b3c65240021a798e4/ecds_old_building_09.glb"
-        position="0 -1 0"
-        gps-new-entity-place="latitude: 31.439317; longitude: 74.369098"
-        scale="0.05 0.05 0.05"
+        position="0 4 0"
+        gps-new-entity-place="latitude: 31.439318; longitude: 74.369099"
+        scale="3 3 3"
       ></a-entity>
-      <a-entity
+      <!-- <a-entity
         gltf-model="./scene.gltf"
         position="0 -1 0"
         gps-new-entity-place="latitude: 31.439318; longitude: 74.369099"
         scale="0.05 0.05 0.05"
-      ></a-entity>
+      ></a-entity> -->
       <!-- <a-entity material='color: red' position="0 -1 0" geometry='primitive: box' gps-new-entity-place="latitude: 31.439318; longitude: 74.369099" scale="0.5 0.5 0.5"></a-entity> -->
     </a-scene>
     <script>
