--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
     >
       <a-camera gps-new-camera></a-camera>
       <a-entity
-        gltf-model="https://github.com/HarisHassan555/glbfiles/raw/3f218e1886ef19abfbff119b3c65240021a798e4/ecds_old_building_09.glb"
+        gltf-model="url(https://github.com/HarisHassan555/glbfiles/raw/3f218e1886ef19abfbff119b3c65240021a798e4/ecds_old_building_09.glb)"
         position="0 4 0"
         gps-new-entity-place="latitude: 31.439318; longitude: 74.369099"
         scale="3 3 3"
