--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
     >
       <a-camera gps-new-camera></a-camera>
       <a-entity
-        gltf-model="https://raw.githubusercontent.com/KhronosGroup/glTF-Sample-Models/master/2.0/Duck/glTF/Duck.gltf"
+        gltf-model="https://github.com/HarisHassan555/glbfiles/raw/main/residential_complex_modern_apartment_building%20(1)/scene.gltf"
         position="0 4 0"
         gps-new-entity-place="latitude: 31.439318; longitude: 74.369099"
         scale="3 3 3"
