--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
     >
       <a-camera gps-new-camera></a-camera>
       <a-entity
-        src="https://github.com/HarisHassan555/glbfiles/raw/main/ecds_old_building_09.glb"
+        gltf-model="https://github.com/HarisHassan555/glbfiles/raw/main/2CylinderEngine.glb"
         position="0 4 0"
         gps-new-entity-place="latitude: 31.439318; longitude: 74.369099"
         scale="3 3 3"
