--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
     >
       <a-camera gps-new-camera></a-camera>
       <a-entity
-        gltf-model="https://github.com/HarisHassan555/glbfiles/raw/main/2CylinderEngine.glb"
+        gltf-model= "https://raw.githubusercontent.com/HarisHassan555/glbfiles/main/ecds_old_building_07/scene.gltf"
         position="0 4 0"
         gps-new-entity-place="latitude: 31.439318; longitude: 74.369099"
         scale="3 3 3"
