--- a/public/index.html
+++ b/public/index.html
@@ -17,47 +17,57 @@
       vr-mode-ui="enabled: false"
       arjs="sourceType: webcam; videoTexture: true; debugUIEnabled: false"
       renderer="antialias: true; alpha: true"
+      embedded
+      gps-new-camera="simulateAltitude: 1.6;"
     >
       <a-camera gps-new-camera></a-camera>
-      <!-- <a-entity
-        gltf-model= "https://raw.githubusercontent.com/HarisHassan555/glbfiles/main/building_no_6_form_tokyo_otemachi_building_pack/scene.gltf"
-        position="0 -4 0"
-        gps-new-entity-place="latitude: 31.439318; longitude: 74.369099"
-        scale="0.03 0.03 0.03"
-      ></a-entity> -->
-      <a-entity
-        gltf-model="./scene.gltf"
-        position="0 -1 0"
-        gps-new-entity-place="latitude: 31.450426; longitude: 74.369099"
-        scale="20 20 20"
-      ></a-entity>
-      <!-- <a-entity material='color: red' position="0 -1 0" geometry='primitive: box' gps-new-entity-place="latitude: 31.439318; longitude: 74.369099" scale="0.5 0.5 0.5"></a-entity> -->
     </a-scene>
-    <iframe
-      src="https://www.chatbase.co/chatbot-iframe/o2V33Y8riGSuHDl2jzOk_"
-      width="100%"
-      style="height: 100%; min-height: 700px"
-      frameborder="0"
-    ></iframe>
     <script>
-      window.embeddedChatbotConfig = {
-        chatbotId: "o2V33Y8riGSuHDl2jzOk_",
-        domain: "www.chatbase.co",
-      };
-    </script>
-    <script
-      src="https://www.chatbase.co/embed.min.js"
-      chatbotId="o2V33Y8riGSuHDl2jzOk_"
-      domain="www.chatbase.co"
-      defer
-    ></script>
-    <script>
-      fetch("https://backend-two-mu-64.vercel.app/buildings")
-        .then((res) => {
-          return res.json();
+      // Function to create an a-entity element
+      function createEntity(name, latitude, longitude, fileUrl) {
+        return `
+          <a-entity 
+            gltf-model="${fileUrl}" 
+            position="0 0 0" 
+            gps-new-entity-place="latitude: ${latitude}; longitude: ${longitude}" 
+            scale="1 1 1"
+          ></a-entity>
+        `;
+      }
+
+      // Fetch data from API and add entities
+      fetch('https://backend-two-mu-64.vercel.app/buildings')
+        .then(res => res.json())
+        .then(data => {
+          console.log(data); // Log data to console for debugging
+
+          // Ensure data is an array
+          if (Array.isArray(data)) {
+            // Create entities and append them to the scene
+            const scene = document.querySelector('a-scene');
+
+            data.forEach(element => {
+              // Extract name, latitude, longitude, and image file URL
+              const name = element.name;
+              const latitude = element.coordinates.lat; // Access latitude
+              const longitude = element.coordinates.lng; // Access longitude
+              const fileUrl = element.File; // Access file URL
+
+              // Create and append the entity
+              const entityHTML = createEntity(name, latitude, longitude, fileUrl);
+              const tempDiv = document.createElement('div');
+              tempDiv.innerHTML = entityHTML;
+              scene.appendChild(tempDiv.firstChild);
+
+              // Log for each entity
+              console.log(`Entity Created: ${name}, Lat: ${latitude}, Lng: ${longitude}, File: ${fileUrl}`);
+            });
+          } else {
+            console.error('Expected an array but got:', data);
+          }
         })
-        .then((data) => {
-          console.log(data);
+        .catch(error => {
+          console.error('Error fetching data:', error);
         });
     </script>
   </body>
