--- a/public/index.html
+++ b/public/index.html
@@ -1,74 +1,107 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>AR.js A-Frame Location-based</title>
-    <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
-    <script
-      type="text/javascript"
-      src="https://raw.githack.com/AR-js-org/AR.js/master/three.js/build/ar-threex-location-only.js"
-    ></script>
-    <script
-      type="text/javascript"
-      src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"
-    ></script>
-  </head>
-  <body>
-    <a-scene
-      vr-mode-ui="enabled: false"
-      arjs="sourceType: webcam; videoTexture: true; debugUIEnabled: false"
-      renderer="antialias: true; alpha: true"
-      embedded
-      gps-new-camera="simulateAltitude: 1.6;"
-    >
-      <a-camera gps-new-camera></a-camera>
-    </a-scene>
-    <script>
-      // Function to create an a-entity element
-      function createEntity(name, latitude, longitude, fileUrl) {
-        return `
-          <a-entity 
-            gltf-model="${fileUrl}" 
-            position="0 0 0" 
-            gps-new-entity-place="latitude: ${latitude}; longitude: ${longitude}" 
-            scale="1 1 1"
-          ></a-entity>
-        `;
+<head>
+  <title>AR.js A-Frame Location-based</title>
+  <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
+  <script
+    type="text/javascript"
+    src="https://raw.githack.com/AR-js-org/AR.js/master/three.js/build/ar-threex-location-only.js"
+  ></script>
+  <script
+    type="text/javascript"
+    src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"
+  ></script>
+  <style>
+    /* Basic styling for iframe */
+    iframe {
+      width: 100%;
+      height: 400px; /* Default height, adjust as needed */
+      border: none;
+      background-color: none;
+      position: fixed;
+      bottom: 0;
+      right: 0;
+      z-index: 9999;
+      max-width: 400px; /* Maximum width for larger screens */
+      max-height: 400px; /* Maximum height for larger screens */
+      border-radius: 8px; /* Rounded corners for aesthetics */
+    }
+
+    /* Responsive adjustments */
+    @media (max-width: 600px) {
+      iframe {
+        width: 100%;
+        height: 300px; /* Adjust height for smaller screens */
       }
+    }
+  </style>
+</head>
+<body>
+  <a-scene
+    vr-mode-ui="enabled: false"
+    arjs="sourceType: webcam; videoTexture: true; debugUIEnabled: false"
+    renderer="antialias: true; alpha: true"
+    embedded
+    gps-new-camera="simulateAltitude: 1.6;"
+  >
+    <a-camera gps-new-camera></a-camera>
+  </a-scene>
 
-      // Fetch data from API and add entities
-      fetch('https://backend-two-mu-64.vercel.app/buildings')
-        .then(res => res.json())
-        .then(data => {
-          console.log(data); // Log data to console for debugging
+  <script>
+    // Function to create an a-entity element
+    function createEntity(name, latitude, longitude, fileUrl) {
+      return `
+        <a-entity 
+          gltf-model="${fileUrl}" 
+          position="0 0 0" 
+          gps-new-entity-place="latitude: ${latitude}; longitude: ${longitude}" 
+          scale="1 1 1"
+        ></a-entity>
+      `;
+    }
 
-          // Ensure data is an array
-          if (Array.isArray(data)) {
-            // Create entities and append them to the scene
-            const scene = document.querySelector('a-scene');
+    // Fetch data from API and add entities
+    fetch('https://backend-two-mu-64.vercel.app/buildings')
+      .then(res => res.json())
+      .then(data => {
+        console.log(data); // Log data to console for debugging
 
-            data.forEach(element => {
-              // Extract name, latitude, longitude, and image file URL
-              const name = element.name;
-              const latitude = element.coordinates.lat; // Access latitude
-              const longitude = element.coordinates.lng; // Access longitude
-              const fileUrl = element.File; // Access file URL
+        // Ensure data is an array
+        if (Array.isArray(data)) {
+          // Create entities and append them to the scene
+          const scene = document.querySelector('a-scene');
 
-              // Create and append the entity
-              const entityHTML = createEntity(name, latitude, longitude, fileUrl);
-              const tempDiv = document.createElement('div');
-              tempDiv.innerHTML = entityHTML;
-              scene.appendChild(tempDiv.firstChild);
+          data.forEach(element => {
+            // Extract name, latitude, longitude, and image file URL
+            const name = element.name;
+            const latitude = element.coordinates.lat; // Access latitude
+            const longitude = element.coordinates.lng; // Access longitude
+            const fileUrl = element.File; // Access file URL
 
-              // Log for each entity
-              console.log(`Entity Created: ${name}, Lat: ${latitude}, Lng: ${longitude}, File: ${fileUrl}`);
-            });
-          } else {
-            console.error('Expected an array but got:', data);
-          }
-        })
-        .catch(error => {
-          console.error('Error fetching data:', error);
-        });
-    </script>
-  </body>
+            // Create and append the entity
+            const entityHTML = createEntity(name, latitude, longitude, fileUrl);
+            const tempDiv = document.createElement('div');
+            tempDiv.innerHTML = entityHTML;
+            scene.appendChild(tempDiv.firstChild);
+
+            // Log for each entity
+            console.log(`Entity Created: ${name}, Lat: ${latitude}, Lng: ${longitude}, File: ${fileUrl}`);
+          });
+        } else {
+          console.error('Expected an array but got:', data);
+        }
+      })
+      .catch(error => {
+        console.error('Error fetching data:', error);
+      });
+
+    // Example onclick event handler
+    function handleClick() {
+      alert('Iframe clicked!');
+      // Additional actions can be added here
+    }
+  </script>
+
+  <iframe onclick="handleClick()" src="https://homepro-d2fe.vercel.app/" title="Chatbot"></iframe>
+</body>
 </html>
